--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1",
-    "javascript": "^1.0.0",
-    "node-dev": "^5.1.0"
-  },
   "scripts": {
-    "start": "node-dev --respawn src/server.js"
+    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+  },
+  "devDependencies": {
+    "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.7",
+    "express": "^4.17.1",
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.57"
   }
 }
